--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
       <artifactId>org.apache.commons.io</artifactId>
       <version>2.4</version>
   </dependency>
+  
+   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+   <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.5.1</version>
+      <scope>test</scope>
+  </dependency>
+   
+  
     
     
     
